Add question publication and assessment eligibility rules